gather: Create doc for class info

--- a/WoW analysis.ipynb
+++ b/WoW analysis.ipynb
@@ -28978,6 +28978,159 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Class List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import class list to reference for managing multiple roles within classes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_dict = [{'class': 'Warrior', 'spec': 'Arms', 'role': 'damage'},\n",
+    " {'class': 'Warrior', 'spec': 'Fury', 'role': 'damage'},\n",
+    " {'class': 'Warrior', 'spec': 'Protection', 'role': 'tank'},\n",
+    " {'class': 'Paladin', 'spec': 'Holy', 'role': 'healer'},\n",
+    " {'class': 'Paladin', 'spec': 'Protection', 'role': 'tank'},\n",
+    " {'class': 'Paladin', 'spec': 'Retribution', 'role': 'damage'},\n",
+    " {'class': 'Hunter', 'spec': 'Beast Mastery', 'role': 'damage'},\n",
+    " {'class': 'Hunter', 'spec': 'Marksmanship', 'role': 'damage'},\n",
+    " {'class': 'Hunter', 'spec': 'Survival', 'role': 'damage'},\n",
+    " {'class': 'Rogue', 'spec': 'Assassination', 'role': 'damage'},\n",
+    " {'class': 'Rogue', 'spec': 'Outlaw', 'role': 'damage'},\n",
+    " {'class': 'Rogue', 'spec': 'Subtlety', 'role': 'damage'},\n",
+    " {'class': 'Priest', 'spec': 'Discipline', 'role': 'healer'},\n",
+    " {'class': 'Priest', 'spec': 'Holy', 'role': 'healer'},\n",
+    " {'class': 'Priest', 'spec': 'Shadow', 'role': 'damage'},\n",
+    " {'class': 'Death Knight', 'spec': 'Blood', 'role': 'tank'},\n",
+    " {'class': 'Death Knight', 'spec': 'Frost', 'role': 'damage'},\n",
+    " {'class': 'Death Knight', 'spec': 'Unholy', 'role': 'damage'},\n",
+    " {'class': 'Shaman', 'spec': 'Elemental', 'role': 'damage'},\n",
+    " {'class': 'Shaman', 'spec': 'Enhancement', 'role': 'damage'},\n",
+    " {'class': 'Shaman', 'spec': 'Restoration', 'role': 'healer'},\n",
+    " {'class': 'Mage', 'spec': 'Arcane', 'role': 'damage'},\n",
+    " {'class': 'Mage', 'spec': 'Fire', 'role': 'damage'},\n",
+    " {'class': 'Mage', 'spec': 'Frost', 'role': 'damage'},\n",
+    " {'class': 'Warlock', 'spec': 'Affliction', 'role': 'damage'},\n",
+    " {'class': 'Warlock', 'spec': 'Demonology', 'role': 'damage'},\n",
+    " {'class': 'Warlock', 'spec': 'Destruction', 'role': 'damage'},\n",
+    " {'class': 'Monk', 'spec': 'Brewmaster', 'role': 'tank'},\n",
+    " {'class': 'Monk', 'spec': 'Mistweaver', 'role': 'healer'},\n",
+    " {'class': 'Monk', 'spec': 'Windwalker', 'role': 'damage'},\n",
+    " {'class': 'Druid', 'spec': 'Balance', 'role': 'damage'},\n",
+    " {'class': 'Druid', 'spec': 'Feral', 'role': 'damage'},\n",
+    " {'class': 'Druid', 'spec': 'Guardian', 'role': 'tank'},\n",
+    " {'class': 'Druid', 'spec': 'Restoration', 'role': 'healer'},\n",
+    " {'class': 'Demon Hunter', 'spec': 'Havoc', 'role': 'damage'},\n",
+    " {'class': 'Demon Hunter', 'spec': 'Vengeance', 'role': 'tank'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>spec</th>\n",
+       "      <th>role</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Warrior</td>\n",
+       "      <td>Arms</td>\n",
+       "      <td>damage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Warrior</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>damage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Warrior</td>\n",
+       "      <td>Protection</td>\n",
+       "      <td>tank</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paladin</td>\n",
+       "      <td>Holy</td>\n",
+       "      <td>healer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Paladin</td>\n",
+       "      <td>Protection</td>\n",
+       "      <td>tank</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     class        spec    role\n",
+       "0  Warrior        Arms  damage\n",
+       "1  Warrior        Fury  damage\n",
+       "2  Warrior  Protection    tank\n",
+       "3  Paladin        Holy  healer\n",
+       "4  Paladin  Protection    tank"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_info = pd.DataFrame(class_dict, columns = ['class', 'spec', 'role'])\n",
+    "class_info.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save info\n",
+    "class_info.to_csv('class_info.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='wrangle'></a>\n",
     "## Wrangle"
    ]
