test: GUILD_INFO import

--- a/WoW analysis.ipynb
+++ b/WoW analysis.ipynb
@@ -34878,6 +34878,41 @@
     "    \n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test imported functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'guild_name': 'Last%20Pull', 'realm': 'Cenarius', 'region': 'US'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guild_info = wa.GUILD_INFO\n",
+    "guild_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
