wrangle: Get coven glare damage taken

--- a/guild-awards-analysis.ipynb
+++ b/guild-awards-analysis.ipynb
@@ -22484,6 +22484,295 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Read in info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glare = pd.read_csv('guild_awards/coven_glare_data.csv', encoding='iso-8859-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>hits</th>\n",
+       "      <th>damage_taken</th>\n",
+       "      <th>fight_count</th>\n",
+       "      <th>primary_role</th>\n",
+       "      <th>av_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Divanance</td>\n",
+       "      <td>20</td>\n",
+       "      <td>61884393</td>\n",
+       "      <td>69</td>\n",
+       "      <td>tank</td>\n",
+       "      <td>0.289855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Earrl</td>\n",
+       "      <td>22</td>\n",
+       "      <td>68046689</td>\n",
+       "      <td>69</td>\n",
+       "      <td>tank</td>\n",
+       "      <td>0.318841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Brian</td>\n",
+       "      <td>24</td>\n",
+       "      <td>104496861</td>\n",
+       "      <td>69</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.347826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ayriea</td>\n",
+       "      <td>28</td>\n",
+       "      <td>121880035</td>\n",
+       "      <td>67</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.417910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Vaelyra</td>\n",
+       "      <td>27</td>\n",
+       "      <td>101368098</td>\n",
+       "      <td>64</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.421875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cagliostro</td>\n",
+       "      <td>27</td>\n",
+       "      <td>114652162</td>\n",
+       "      <td>64</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.421875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Acturus</td>\n",
+       "      <td>32</td>\n",
+       "      <td>137605433</td>\n",
+       "      <td>63</td>\n",
+       "      <td>healer</td>\n",
+       "      <td>0.507937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>36</td>\n",
+       "      <td>160271270</td>\n",
+       "      <td>69</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.521739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Shallowfall</td>\n",
+       "      <td>32</td>\n",
+       "      <td>94747030</td>\n",
+       "      <td>61</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.524590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Èllipses</td>\n",
+       "      <td>20</td>\n",
+       "      <td>81350848</td>\n",
+       "      <td>37</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.540541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Future</td>\n",
+       "      <td>37</td>\n",
+       "      <td>156405990</td>\n",
+       "      <td>63</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.587302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Illestra</td>\n",
+       "      <td>41</td>\n",
+       "      <td>156120309</td>\n",
+       "      <td>69</td>\n",
+       "      <td>healer</td>\n",
+       "      <td>0.594203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Psychodruid</td>\n",
+       "      <td>34</td>\n",
+       "      <td>136400160</td>\n",
+       "      <td>56</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.607143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Pulsè</td>\n",
+       "      <td>39</td>\n",
+       "      <td>158543548</td>\n",
+       "      <td>63</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.619048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Mythrose</td>\n",
+       "      <td>44</td>\n",
+       "      <td>192902216</td>\n",
+       "      <td>69</td>\n",
+       "      <td>healer</td>\n",
+       "      <td>0.637681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Radiantldeal</td>\n",
+       "      <td>42</td>\n",
+       "      <td>165378621</td>\n",
+       "      <td>64</td>\n",
+       "      <td>healer</td>\n",
+       "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Velryssa</td>\n",
+       "      <td>25</td>\n",
+       "      <td>104030498</td>\n",
+       "      <td>38</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.657895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Stradivarus</td>\n",
+       "      <td>40</td>\n",
+       "      <td>188378086</td>\n",
+       "      <td>60</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Shadowbaine</td>\n",
+       "      <td>50</td>\n",
+       "      <td>228070342</td>\n",
+       "      <td>69</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.724638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Metonymy</td>\n",
+       "      <td>50</td>\n",
+       "      <td>219855279</td>\n",
+       "      <td>69</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.724638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Au</td>\n",
+       "      <td>31</td>\n",
+       "      <td>105581475</td>\n",
+       "      <td>40</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>0.775000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          player  hits  damage_taken  fight_count primary_role  av_count\n",
+       "6      Divanance    20      61884393           69         tank  0.289855\n",
+       "7          Earrl    22      68046689           69         tank  0.318841\n",
+       "3          Brian    24     104496861           69       damage  0.347826\n",
+       "2         Ayriea    28     121880035           67       damage  0.417910\n",
+       "26       Vaelyra    27     101368098           64       damage  0.421875\n",
+       "4     Cagliostro    27     114652162           64       damage  0.421875\n",
+       "0        Acturus    32     137605433           63       healer  0.507937\n",
+       "15        Petrol    36     160271270           69       damage  0.521739\n",
+       "20   Shallowfall    32      94747030           61       damage  0.524590\n",
+       "29      Èllipses    20      81350848           37       damage  0.540541\n",
+       "8         Future    37     156405990           63       damage  0.587302\n",
+       "9       Illestra    41     156120309           69       healer  0.594203\n",
+       "16   Psychodruid    34     136400160           56       damage  0.607143\n",
+       "17         Pulsè    39     158543548           63       damage  0.619048\n",
+       "14      Mythrose    44     192902216           69       healer  0.637681\n",
+       "18  Radiantldeal    42     165378621           64       healer  0.656250\n",
+       "27      Velryssa    25     104030498           38       damage  0.657895\n",
+       "21   Stradivarus    40     188378086           60       damage  0.666667\n",
+       "19   Shadowbaine    50     228070342           69       damage  0.724638\n",
+       "13      Metonymy    50     219855279           69       damage  0.724638\n",
+       "1             Au    31     105581475           40       damage  0.775000"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glare_damage = la.clean_fight_count(glare, df, player_names, 2073, ['hits', 'damage_taken'])\n",
+    "glare_damage = la.find_count_order(glare_damage, 30, 'hits')\n",
+    "glare_damage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glare_damage.to_csv('guild_awards/coven_glare_damage.csv', encoding='iso-8859-1', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='coven-blades'></a>\n",
     "### Least Shadow Blades Damage"
    ]
