test: Test function behaviour

--- a/WoW analysis.ipynb
+++ b/WoW analysis.ipynb
@@ -39798,7 +39798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39808,6 +39808,90 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>log_id</th>\n",
+       "      <th>log_start</th>\n",
+       "      <th>log_end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cf129KrpDWPXT7xz</td>\n",
+       "      <td>1531274890714</td>\n",
+       "      <td>1531285516023</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tnmFjCNGXJgVZYTz</td>\n",
+       "      <td>1531187632213</td>\n",
+       "      <td>1531198443503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1gC8Lr2HvyTjDpF</td>\n",
+       "      <td>1530842431983</td>\n",
+       "      <td>1530853165805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9rzLcb8w6CWJAgfn</td>\n",
+       "      <td>1530670081169</td>\n",
+       "      <td>1530679559196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>VhmB61LqvrRQPFwJ</td>\n",
+       "      <td>1530152172272</td>\n",
+       "      <td>1530161374270</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             log_id      log_start        log_end\n",
+       "0  Cf129KrpDWPXT7xz  1531274890714  1531285516023\n",
+       "1  tnmFjCNGXJgVZYTz  1531187632213  1531198443503\n",
+       "2  M1gC8Lr2HvyTjDpF  1530842431983  1530853165805\n",
+       "3  9rzLcb8w6CWJAgfn  1530670081169  1530679559196\n",
+       "4  VhmB61LqvrRQPFwJ  1530152172272  1530161374270"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_info.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -39847,7 +39931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39868,7 +39952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -39915,6 +39999,7 @@
       "Log ID bvV2YFyrRQdpJ6xf done.\n",
       "Log ID c1ZavyhdWfMAk6NH done.\n",
       "Log ID C8VnGm3qW9Ldzwvg done.\n",
+      "Log ID Cf129KrpDWPXT7xz done.\n",
       "Log ID cNbjQKh89RxWVPDp done.\n",
       "Log ID cR4g7wGY2z9VWbxH done.\n",
       "Log ID D6zV34J7FtgRcLBq done.\n",
@@ -39976,6 +40061,7 @@
       "Log ID TG7vH2QpFA3KjcNz done.\n",
       "Log ID TJPXdVcafZ49tLGm done.\n",
       "Log ID TmqQ4gPRGWB3MXJj done.\n",
+      "Log ID tnmFjCNGXJgVZYTz done.\n",
       "Log ID Tvrh8BgQL6y2qPza done.\n",
       "Log ID tZQFbvABVh9rfDHq done.\n",
       "Log ID v4aXQJrC3W6ybj9Y done.\n",
@@ -40014,14 +40100,172 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fight_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-e1015d4ff8db>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_master_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlog_info\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfight_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'fight_df' is not defined"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>log_id</th>\n",
+       "      <th>pull_id</th>\n",
+       "      <th>pull_start</th>\n",
+       "      <th>pull_end</th>\n",
+       "      <th>boss_id</th>\n",
+       "      <th>boss_name</th>\n",
+       "      <th>difficulty</th>\n",
+       "      <th>kill</th>\n",
+       "      <th>player_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1dApmwBHyQ2vcVTF</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1397463</td>\n",
+       "      <td>1482607</td>\n",
+       "      <td>2092</td>\n",
+       "      <td>Argus the Unmaker</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Petrol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1dApmwBHyQ2vcVTF</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1397463</td>\n",
+       "      <td>1482607</td>\n",
+       "      <td>2092</td>\n",
+       "      <td>Argus the Unmaker</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Radiantldeal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1dApmwBHyQ2vcVTF</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1397463</td>\n",
+       "      <td>1482607</td>\n",
+       "      <td>2092</td>\n",
+       "      <td>Argus the Unmaker</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Shallowfall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1dApmwBHyQ2vcVTF</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1397463</td>\n",
+       "      <td>1482607</td>\n",
+       "      <td>2092</td>\n",
+       "      <td>Argus the Unmaker</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Acturus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1dApmwBHyQ2vcVTF</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1397463</td>\n",
+       "      <td>1482607</td>\n",
+       "      <td>2092</td>\n",
+       "      <td>Argus the Unmaker</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Tawñ</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             log_id pull_id  pull_start  pull_end boss_id          boss_name  \\\n",
+       "0  1dApmwBHyQ2vcVTF       1     1397463   1482607    2092  Argus the Unmaker   \n",
+       "1  1dApmwBHyQ2vcVTF       1     1397463   1482607    2092  Argus the Unmaker   \n",
+       "2  1dApmwBHyQ2vcVTF       1     1397463   1482607    2092  Argus the Unmaker   \n",
+       "3  1dApmwBHyQ2vcVTF       1     1397463   1482607    2092  Argus the Unmaker   \n",
+       "4  1dApmwBHyQ2vcVTF       1     1397463   1482607    2092  Argus the Unmaker   \n",
+       "\n",
+       "  difficulty   kill   player_name  \n",
+       "0          5  False        Petrol  \n",
+       "1          5  False  Radiantldeal  \n",
+       "2          5  False   Shallowfall  \n",
+       "3          5  False       Acturus  \n",
+       "4          5  False          Tawñ  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fight_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 34356 entries, 0 to 767\n",
+      "Data columns (total 11 columns):\n",
+      "boss_id        34356 non-null object\n",
+      "boss_name      34356 non-null object\n",
+      "difficulty     34356 non-null object\n",
+      "end_time       0 non-null object\n",
+      "kill           34356 non-null bool\n",
+      "log_id         34356 non-null object\n",
+      "player_name    34356 non-null object\n",
+      "pull_end       34356 non-null int32\n",
+      "pull_id        34356 non-null object\n",
+      "pull_start     34356 non-null int32\n",
+      "start_time     0 non-null object\n",
+      "dtypes: bool(1), int32(2), object(8)\n",
+      "memory usage: 2.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "fight_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Master dataframe created.\n",
+      "\n",
+      "master_list saved.\n"
      ]
     }
    ],
