feat: Add max av rank info

--- a/guild-awards-analysis.ipynb
+++ b/guild-awards-analysis.ipynb
@@ -49,15 +49,15 @@
     "    </ul></li>\n",
     "<li><a href=\"#overall\">Overall</a>\n",
     "    <ul>\n",
-    "        <li><a href=\"#pots\">Most Pot Use</a></li>\n",
-    "        <li><a href=\"#imonar-dispels\">Dispels</a></li>\n",
+    "        <li><a href=\"#pots\">Most Pots Used</a></li>\n",
+    "        <li><a href=\"#healthstone\">Most Healthstones Used</a></li>\n",
     "    </ul></li>\n",
     "</ul>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35105,6 +35105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='healthstone'></a>\n",
     "### Healthstones"
    ]
   },
@@ -41308,11 +41309,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rankings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>primary_role</th>\n",
+       "      <th>boss_id</th>\n",
+       "      <th>boss_name</th>\n",
+       "      <th>percentile</th>\n",
+       "      <th>ilevel</th>\n",
+       "      <th>spec</th>\n",
+       "      <th>metric</th>\n",
+       "      <th>ranking_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Vaelyra</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>2063</td>\n",
+       "      <td>Aggramar</td>\n",
+       "      <td>75</td>\n",
+       "      <td>974</td>\n",
+       "      <td>Havoc</td>\n",
+       "      <td>dps</td>\n",
+       "      <td>2018-04-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Vaelyra</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>2064</td>\n",
+       "      <td>Portal Keeper Hasabel</td>\n",
+       "      <td>75</td>\n",
+       "      <td>971</td>\n",
+       "      <td>Havoc</td>\n",
+       "      <td>dps</td>\n",
+       "      <td>2018-03-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Vaelyra</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>2070</td>\n",
+       "      <td>Antoran High Command</td>\n",
+       "      <td>56</td>\n",
+       "      <td>963</td>\n",
+       "      <td>Havoc</td>\n",
+       "      <td>dps</td>\n",
+       "      <td>2018-02-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Vaelyra</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>2073</td>\n",
+       "      <td>The Coven of Shivarra</td>\n",
+       "      <td>70</td>\n",
+       "      <td>974</td>\n",
+       "      <td>Havoc</td>\n",
+       "      <td>dps</td>\n",
+       "      <td>2018-03-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Vaelyra</td>\n",
+       "      <td>damage</td>\n",
+       "      <td>2074</td>\n",
+       "      <td>Felhounds of Sargeras</td>\n",
+       "      <td>91</td>\n",
+       "      <td>974</td>\n",
+       "      <td>Havoc</td>\n",
+       "      <td>dps</td>\n",
+       "      <td>2018-04-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   player_name primary_role boss_id              boss_name  percentile  \\\n",
+       "10     Vaelyra       damage    2063               Aggramar          75   \n",
+       "11     Vaelyra       damage    2064  Portal Keeper Hasabel          75   \n",
+       "13     Vaelyra       damage    2070   Antoran High Command          56   \n",
+       "14     Vaelyra       damage    2073  The Coven of Shivarra          70   \n",
+       "15     Vaelyra       damage    2074  Felhounds of Sargeras          91   \n",
+       "\n",
+       "    ilevel   spec metric ranking_date  \n",
+       "10     974  Havoc    dps   2018-04-25  \n",
+       "11     971  Havoc    dps   2018-03-07  \n",
+       "13     963  Havoc    dps   2018-02-28  \n",
+       "14     974  Havoc    dps   2018-03-30  \n",
+       "15     974  Havoc    dps   2018-04-12  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_ranks = la.extract_max_parses()\n",
+    "top_ranks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_ranks.to_csv('guild_awards/overall_max_av_rank.csv', encoding='iso-8859-1', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Max Progression Parse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create function that finds progression logs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[['log_id', 'log_start', 'log_end']][df.kill == True]"
+   ]
   }
  ],
  "metadata": {
