chore: Add navigation for rankings and prog-parse

--- a/guild-awards-analysis.ipynb
+++ b/guild-awards-analysis.ipynb
@@ -51,6 +51,8 @@
     "    <ul>\n",
     "        <li><a href=\"#pots\">Most Pots Used</a></li>\n",
     "        <li><a href=\"#healthstone\">Most Healthstones Used</a></li>\n",
+    "        <li><a href=\"#rankings\">Rankings</a></li>\n",
+    "        <li><a href=\"#prog-parse\">Highest Parse on Progression Kill</a></li>\n",
     "    </ul></li>\n",
     "</ul>"
    ]
@@ -41312,6 +41314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='rankings'></a>\n",
     "### Rankings"
    ]
   },
@@ -41456,6 +41459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='prog-parse'></a>\n",
     "### Max Progression Parse"
    ]
   },
