gather: Add new Uldir log

--- a/uldir_raid_analysis.ipynb
+++ b/uldir_raid_analysis.ipynb
@@ -4686,33 +4686,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>nCLBA4NJHkKmzM37</td>\n",
+       "      <td>1537496012825</td>\n",
+       "      <td>1537506043127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>ArVhTvdPmLf9JHjR</td>\n",
        "      <td>1537409044919</td>\n",
        "      <td>1537419704897</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>dV3RWaQchfv9zT64</td>\n",
        "      <td>1537322838302</td>\n",
        "      <td>1537333210687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>Jd2kb7C9PncfqN1v</td>\n",
        "      <td>1536898194555</td>\n",
        "      <td>1536901559060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>4mzCD2x9hnqZb3KG</td>\n",
        "      <td>1536804378912</td>\n",
        "      <td>1536814385116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>kgfWrMTP93417Yja</td>\n",
-       "      <td>1536890848979</td>\n",
-       "      <td>1536897665967</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4720,11 +4720,11 @@
       ],
       "text/plain": [
        "             log_id      log_start        log_end\n",
-       "0  ArVhTvdPmLf9JHjR  1537409044919  1537419704897\n",
-       "1  dV3RWaQchfv9zT64  1537322838302  1537333210687\n",
-       "2  Jd2kb7C9PncfqN1v  1536898194555  1536901559060\n",
-       "3  4mzCD2x9hnqZb3KG  1536804378912  1536814385116\n",
-       "4  kgfWrMTP93417Yja  1536890848979  1536897665967"
+       "0  nCLBA4NJHkKmzM37  1537496012825  1537506043127\n",
+       "1  ArVhTvdPmLf9JHjR  1537409044919  1537419704897\n",
+       "2  dV3RWaQchfv9zT64  1537322838302  1537333210687\n",
+       "3  Jd2kb7C9PncfqN1v  1536898194555  1536901559060\n",
+       "4  4mzCD2x9hnqZb3KG  1536804378912  1536814385116"
       ]
      },
      "execution_count": 4,
@@ -4753,11 +4753,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating file ArVhTvdPmLf9JHjR\n",
-      "Creating file dV3RWaQchfv9zT64\n",
-      "Creating file Jd2kb7C9PncfqN1v\n",
-      "Creating file 4mzCD2x9hnqZb3KG\n",
-      "Creating file kgfWrMTP93417Yja\n",
+      "Creating file nCLBA4NJHkKmzM37\n",
       "\n",
       "All files created.\n",
       "\n"
@@ -4875,6 +4871,7 @@
       "Log ID Jd2kb7C9PncfqN1v done.\n",
       "Log ID kgfWrMTP93417Yja done.\n",
       "Log ID kKrTnBRXgtW3aJHw done.\n",
+      "Log ID nCLBA4NJHkKmzM37 done.\n",
       "Log ID PphkwMFDnmRgK37y done.\n",
       "\n",
       "Dataframe created.\n",
